Fix too much spacing in jumbotron

--- a/_harp/public/assets/css/modules/layout.scss
+++ b/_harp/public/assets/css/modules/layout.scss
@@ -6,7 +6,7 @@
 	position: relative;
 	overflow: auto;
 	.splash-box{
-		min-height: 600px;
+		min-height: 500px;
 	}
 }
 
