--- a/_harp/public/assets/css/modules/skin.scss
+++ b/_harp/public/assets/css/modules/skin.scss
@@ -84,7 +84,7 @@ header{
 .jumbotron{
 	@include linearGradient(#f0f0f0, #d0d0d0);
 	width: 100%;
-	padding: 100px;
+	padding: 40px;
 	height: 100%;
 }
 
